styles.css
* {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   font-family: Roboto;
}

/* Designing for scroll-bar */
::-webkit-scrollbar {
   width: 6px;
}

/* Track */
::-webkit-scrollbar-track {
   background: #2b1111;
   /* border-radius: 5px;  */
}

/* Handle */
::-webkit-scrollbar-thumb {
   background: rgb(180, 0, 0);
   border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
   background: rgba(255, 0, 0, 0.301);
}

.author {
   color: white;
}

.author a {
   margin-top: 18px;
   color: rgb(184, 20, 20);
}

.main-container {
   background-color: #7e2323;
   display: flex;
   flex-direction: column;
   height: 100vh;
   align-items: center;
   justify-content: center;
   background-image: url("./assets/stripes-up.svg"),
      url("./assets/stripes-down.svg"), url("./assets/background.gif");
   background-repeat: no-repeat;
   background-position: left 0 top 0, right 0 bottom -70px, left 50% top 50%;
   background-size: auto, auto, cover;
   background-blend-mode: normal, normal, multiply;
}

h1 {
   color: #fff;
   font-style: normal;
   font-weight: normal;
   /* line-height: 175px; */
   text-align: center;
   font-family: Redressed;
   font-size: 72px;
   align-items: center;
   margin-bottom: 12px;
}

h1 .first-letter {
   font-family: Great Vibes;
   font-size: 140px;
}

h2 {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 36px;
   line-height: 66px;
   text-align: center;
   align-items: center;
   color: #ffffff;
   /* margin-bottom: 48px; */
   width: 310px;

   background: #b72020;
}

.social-media {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   width: 320px;
}

.social-icon {
   margin-top: 48px;
   height: 65px;
   cursor: pointer;
}

.social-icon:hover {
   margin-top: 28px;
   height: 85px;
}

.title {
   padding: 48px 0 24px;
   overflow: hidden;
   /* line-height: 75px; */
}

.catalogo-container {
   background-color: #1f1f1f;
   padding: 0 15% 40px 15%;
}

.product {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 100px;
}

.reverse {
   flex-direction: row-reverse;
}

.product img {
   height: 100%;
   width: 50%;
   margin: 0 18px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
}

.product .text-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow-x: visible;
}

.text-container h3 {
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
   font-size: 48px;
   /* line-height: 56px; */
   text-align: center;

   color: #ffffff;

   text-shadow: -2px 3px 0px #000000;
}

.text-container h4 {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 36px;
   /* line-height: 56px; */
   /* text-align: center; */
   color: #ffffff;
}

.text-container h5 {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   color: #a0a0a0;

   margin-bottom: 12px;
}

.text-container .desc-container {
   justify-content: flex-start;
   overflow-x: visible;
}

ul,
li {
   overflow-x: visible;
}

li::marker {
   color: white;
}

hr {
   margin: 24px 0 24px 0;
   width: 250px;
   color: white;
   border-width: 1px;
}

.sabores-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   overflow: visible;
}

.sabores-container .product {
   flex-direction: column;
   margin: 40px 0;
   justify-content: flex-start;
}

.sabores-container .product img {
   height: auto;
   width: 90%;
   margin: 0 0 18px 0;
}

.special-info {
   /* border: 1px solid red; */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   padding-bottom: 18px;
   overflow: visible;
}

.special-info .delivery {
   display: flex;
   flex-direction: column;
   width: 45%;
   background-color: rgb(34, 34, 34);
   border: 1px solid rgb(49, 49, 49);
   border-radius: 50px;
   margin: 0 18px;
   padding: 0 30px 30px;
   font-family: Roboto;
   font-weight: normal;
   color: white;

   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
}

.special-info h3 {
   margin-bottom: 8px;
   font-size: 18px;
}

.special-info ul {
   padding-left: 24px;
}

.special-info .delivery li {
   margin-bottom: 6px;
}

.special-info .payment {
   display: flex;
   flex-direction: column;
   width: 45%;
   background-color: rgb(34, 34, 34);
   border: 1px solid rgb(49, 49, 49);
   border-radius: 50px;
   margin: 0 18px;
   padding: 0 30px 30px;
   font-family: Roboto;
   font-weight: normal;
   color: white;

   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
}

.special-info .payment ul {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
}

.mySlides {
   display: none;
}

/* Slideshow container */
.hygiene {
   max-width: 1000px;
   max-height: 50vh;
   position: relative;
   margin: auto;
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.548);
   border-radius: 20px;
   margin-bottom: 36px;
   transition: 1s;
}

.hygiene img {
   vertical-align: middle;
   max-height: 50vh;
   width: auto;
   object-fit: contain;
}

/* Next & previous buttons */
.prev,
.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
   padding: 16px;
   margin-top: -22px;
   color: white;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
}

/* Position the "next button" to the right */
.next {
   right: 0;
   border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
   background-color: rgba(0, 0, 0, 0.8);
}

/* Caption text */
.text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 16px 0px;
   position: absolute;
   bottom: 0px;
   width: 100%;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.459);
}

/* Number text (1/3 etc) */
.numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
}

/* Fading animation */
.fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
}

@-webkit-keyframes fade {
   from {
      opacity: 0.4;
   }
   to {
      opacity: 1;
   }
}

@keyframes fade {
   from {
      opacity: 0.4;
   }
   to {
      opacity: 1;
   }
}

@media (max-width: 1024px) {
   .main-container {
      background-size: 35%, 35%, cover;
      background-position: left 0 top 0, right 0 bottom -70px, left 50% top 50%;
   }

   .special-info {
      flex-direction: column;
      align-items: center;
      overflow: visible;
   }

   .special-info .delivery,
   .special-info .payment {
      width: 90%;
      margin-bottom: 36px;
   }

   .product {
      margin: 60px 0;
   }

   .product img {
      height: auto;
      width: 45%;
   }

   .text-container {
      margin: 0 24px;
   }

   .text-container h3 {
      font-size: 28px;
   }

   .text-container h4 {
      font-size: 18px;
   }

   .text-container h5 {
      font-size: 14px;
   }

   hr {
      width: 60%;
   }
}

@media (max-width: 768px) {
   .product {
      flex-direction: column;
   }

   .sabores-container {
      flex-direction: column;
   }

   .sabores-container .product img,
   .product img {
      height: auto;
      width: 100%;
      margin-bottom: 24px;
   }

   .hygiene,
   .hygiene img {
      max-height: 80vh;
   }
}

@media (max-width: 425px) {
   .catalogo-container {
      padding: 0 10% 40px 10%;
   }

   .title {
      padding-top: 18px;
      font-size: 48px;
   }

   .text-container h3 {
      font-size: 20px;
   }

   .text-container h4 {
      font-size: 18px;
   }

   .sabores-container .product {
      margin-top: 0px;
   }

   .product {
      margin-top: 0px;
   }
}

@media (max-width: 375px) {
   h1 .first-letter {
      font-size: 100px;
   }

   h2 {
      font-size: 36px;
      line-height: 66px;
      width: 310px;
   }
}

